--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ main header {
     align-items: center;
 }
 
-.projects {
+#projects {
     display: flex;
     flex-direction: column;
     align-items: center;
