--- a/css/style.css
+++ b/css/style.css
@@ -23,16 +23,28 @@ ul {
 li div{
     background: yellow;
     height: 40px;
-    padding: 0 10px;
+    padding: 5px;
     margin: 5px 0;
     border-radius: 6px;
 
     
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+em {
+    font-size: x-small;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin: 5px 0;
+    text-shadow: 2px 2px 2px skyblue;
+    background-color: rgba(255, 0, 0, 0.3);
+    padding: 5px;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 0, 0, 0.7)
+}
 
 
 main {
@@ -64,10 +76,28 @@ main header {
     background: white;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .project:last-child {
     border-bottom: none;
+}
+
+.projectLink {
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.liveDemo {
+    color: mediumspringgreen;
+    background-color: green;
+    border: 2px dotted turquoise;
+}
+
+.underConstruction {
+    color: firebrick;
+    background-color: orange;
+    border: 2px dashed brown;
 }
